fix class name, gaps

--- a/src/App.css
+++ b/src/App.css
@@ -27,28 +27,33 @@
 .App-link {
   color: #61dafb;
 }
-.mainDiv {
-  display: flex;
 
+.main-div {
+  display: flex;
   justify-content: center;
 }
-.midleDiv {
+
+.midle-div {
   box-sizing: border-box;
   width: 50px;
   height: 50px;
   background-color: yellow;
   position: absolute;
 }
-.div1 {
+
+.button-up {
   grid-area: 2 / 3 / 3 / 4;
 }
-.div2 {
+
+.button-down {
   grid-area: 4 / 3 / 5 / 4;
 }
-.div3 {
+
+.button-left {
   grid-area: 3 / 2 / 4 / 3;
 }
-.div4 {
+
+.button-right {
   grid-area: 3 / 4 / 4 / 5;
 }
 
